# Rust-Web-Service

./: .gitattributes  .gitignore  Cargo.toml
rust_web_service/: Cargo.toml
rust_web_service/src/: main.rs
src/: main.rs
src/web/: index.html  index_script.js  index_style.css
